<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BiologyActivity">

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question: 1"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What is your name?"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/option_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A. Option A"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/option_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B. Option B"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/option_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C. Option C"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/option_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D. Option D"
            android:textSize="16sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:gravity="end">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Previous" />

        <Button
            android:id="@+id/show_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Show Answer" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:gravity="end">

        <Button
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="130dp"
            android:text="Result" />

    </LinearLayout>

    <TextView
        android:id="@+id/show_total_mark"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:padding="16dp"
        android:textColor="#2196F3"
        android:gravity="center"
        android:background="@color/white"
        />

</LinearLayout>


